@@ -2218,6 +2218,52 @@ void store_at(const Psana::Bld::BldDataPimV1* obj, hdf5pp::Group group, long ind
   store_BldDataPimV1(obj, group, index, version, true);
 }
 
+boost::shared_ptr<PSEvt::Proxy<Psana::Bld::BldDataUsdUsbV1> > make_BldDataUsdUsbV1(int version, hdf5pp::Group group, hsize_t idx) {
+  switch (version) {
+  case 0:
+    return boost::make_shared<PSEvt::DataProxy<Psana::Bld::BldDataUsdUsbV1> >(boost::make_shared<BldDataUsdUsbV1_v0>(group, idx));
+  default:
+    return boost::make_shared<PSEvt::DataProxy<Psana::Bld::BldDataUsdUsbV1> >(boost::shared_ptr<Psana::Bld::BldDataUsdUsbV1>());
+  }
+}
+
+void make_datasets(const Psana::Bld::BldDataUsdUsbV1& obj, hdf5pp::Group group, const ChunkPolicy& chunkPolicy,
+                   int deflate, bool shuffle, int version)
+{
+  if (version < 0) version = 0;
+  group.createAttr<uint32_t>("_schemaVersion").store(version);
+  switch (version) {
+  case 0:
+    make_datasets_BldDataUsdUsbV1_v0(obj, group, chunkPolicy, deflate, shuffle);
+    break;
+  default:
+    throw ExceptionSchemaVersion(ERR_LOC, "Bld.BldDataUsdUsbV1", version);
+  }
+}
+
+void store_BldDataUsdUsbV1(const Psana::Bld::BldDataUsdUsbV1* obj, hdf5pp::Group group, long index, int version, bool append)
+{
+  if (version < 0) version = 0;
+  if (not append) group.createAttr<uint32_t>("_schemaVersion").store(version);
+  switch (version) {
+  case 0:
+    store_BldDataUsdUsbV1_v0(obj, group, index, append);
+    break;
+  default:
+    throw ExceptionSchemaVersion(ERR_LOC, "Bld.BldDataUsdUsbV1", version);
+  }
+}
+
+void store(const Psana::Bld::BldDataUsdUsbV1& obj, hdf5pp::Group group, int version) 
+{
+  store_BldDataUsdUsbV1(&obj, group, 0, version, false);
+}
+
+void store_at(const Psana::Bld::BldDataUsdUsbV1* obj, hdf5pp::Group group, long index, int version)
+{
+  store_BldDataUsdUsbV1(obj, group, index, version, true);
+}
+
 
 hdf5pp::Type ns_BldDataGMDV0_v0_dataset_data_stored_type()
 {
@@ -3346,6 +3392,175 @@ void store(const Psana::Bld::BldDataAnalogInputV1& obj, hdf5pp::Group group, int
 void store_at(const Psana::Bld::BldDataAnalogInputV1* obj, hdf5pp::Group group, long index, int version)
 {
   store_BldDataAnalogInputV1(obj, group, index, version, true);
+}
+
+
+hdf5pp::Type ns_BldDataBeamMonitorV1_v0_dataset_data_stored_type()
+{
+  typedef ns_BldDataBeamMonitorV1_v0::dataset_data DsType;
+  hdf5pp::CompoundType type = hdf5pp::CompoundType::compoundType<DsType>();
+  type.insert("TotalIntensity", offsetof(DsType, TotalIntensity), hdf5pp::TypeTraits<double>::stored_type());
+  type.insert("X_Position", offsetof(DsType, X_Position), hdf5pp::TypeTraits<double>::stored_type());
+  type.insert("Y_Position", offsetof(DsType, Y_Position), hdf5pp::TypeTraits<double>::stored_type());
+  type.insert("peakA", offsetof(DsType, peakA), hdf5pp::TypeTraits<double>::stored_type());
+  type.insert("peakT", offsetof(DsType, peakT), hdf5pp::TypeTraits<double>::stored_type());
+  return type;
+}
+
+hdf5pp::Type ns_BldDataBeamMonitorV1_v0::dataset_data::stored_type()
+{
+  static hdf5pp::Type type = ns_BldDataBeamMonitorV1_v0_dataset_data_stored_type();
+  return type;
+}
+
+hdf5pp::Type ns_BldDataBeamMonitorV1_v0_dataset_data_native_type()
+{
+  typedef ns_BldDataBeamMonitorV1_v0::dataset_data DsType;
+  hdf5pp::CompoundType type = hdf5pp::CompoundType::compoundType<DsType>();
+  type.insert("TotalIntensity", offsetof(DsType, TotalIntensity), hdf5pp::TypeTraits<double>::native_type());
+  type.insert("X_Position", offsetof(DsType, X_Position), hdf5pp::TypeTraits<double>::native_type());
+  type.insert("Y_Position", offsetof(DsType, Y_Position), hdf5pp::TypeTraits<double>::native_type());
+  type.insert("peakA", offsetof(DsType, peakA), hdf5pp::TypeTraits<double>::native_type());
+  type.insert("peakT", offsetof(DsType, peakT), hdf5pp::TypeTraits<double>::native_type());
+  return type;
+}
+
+hdf5pp::Type ns_BldDataBeamMonitorV1_v0::dataset_data::native_type()
+{
+  static hdf5pp::Type type = ns_BldDataBeamMonitorV1_v0_dataset_data_native_type();
+  return type;
+}
+
+ns_BldDataBeamMonitorV1_v0::dataset_data::dataset_data()
+{
+}
+
+ns_BldDataBeamMonitorV1_v0::dataset_data::dataset_data(const Psana::Bld::BldDataBeamMonitorV1& psanaobj)
+  : TotalIntensity(psanaobj.TotalIntensity())
+  , X_Position(psanaobj.X_Position())
+  , Y_Position(psanaobj.Y_Position())
+  , peakA(psanaobj.peakA())
+  , peakT(psanaobj.peakT())
+{
+}
+
+ns_BldDataBeamMonitorV1_v0::dataset_data::~dataset_data()
+{
+}
+double BldDataBeamMonitorV1_v0::TotalIntensity() const {
+  if (not m_ds_data) read_ds_data();
+  return double(m_ds_data->TotalIntensity);
+}
+double BldDataBeamMonitorV1_v0::X_Position() const {
+  if (not m_ds_data) read_ds_data();
+  return double(m_ds_data->X_Position);
+}
+double BldDataBeamMonitorV1_v0::Y_Position() const {
+  if (not m_ds_data) read_ds_data();
+  return double(m_ds_data->Y_Position);
+}
+double BldDataBeamMonitorV1_v0::peakA() const {
+  if (not m_ds_data) read_ds_data();
+  return double(m_ds_data->peakA);
+}
+double BldDataBeamMonitorV1_v0::peakT() const {
+  if (not m_ds_data) read_ds_data();
+  return double(m_ds_data->peakT);
+}
+ndarray<const double, 1> BldDataBeamMonitorV1_v0::Channel_Intensity() const {
+  if (m_ds_Channel_Intensity.empty()) read_ds_Channel_Intensity();
+  return m_ds_Channel_Intensity;
+}
+void BldDataBeamMonitorV1_v0::read_ds_data() const {
+  m_ds_data = hdf5pp::Utils::readGroup<Bld::ns_BldDataBeamMonitorV1_v0::dataset_data>(m_group, "data", m_idx);
+}
+void BldDataBeamMonitorV1_v0::read_ds_Channel_Intensity() const {
+  m_ds_Channel_Intensity = hdf5pp::Utils::readNdarray<double, 1>(m_group, "Channel_Intensity", m_idx);
+}
+
+void make_datasets_BldDataBeamMonitorV1_v0(const Psana::Bld::BldDataBeamMonitorV1& obj, 
+      hdf5pp::Group group, const ChunkPolicy& chunkPolicy, int deflate, bool shuffle)
+{
+  {
+    hdf5pp::Type dstype = Bld::ns_BldDataBeamMonitorV1_v0::dataset_data::stored_type();
+    hdf5pp::Utils::createDataset(group, "data", dstype, chunkPolicy.chunkSize(dstype), chunkPolicy.chunkCacheSize(dstype), deflate, shuffle);    
+  }
+  {
+    typedef __typeof__(obj.Channel_Intensity()) PsanaArray;
+    const PsanaArray& psana_array = obj.Channel_Intensity();
+    hdf5pp::Type dstype = hdf5pp::ArrayType::arrayType(hdf5pp::TypeTraits<double>::stored_type(), psana_array.shape()[0]);
+    hdf5pp::Utils::createDataset(group, "Channel_Intensity", dstype, chunkPolicy.chunkSize(dstype), chunkPolicy.chunkCacheSize(dstype), deflate, shuffle);    
+  }
+}
+
+void store_BldDataBeamMonitorV1_v0(const Psana::Bld::BldDataBeamMonitorV1* obj, hdf5pp::Group group, long index, bool append)
+{
+  if (obj) {
+    Bld::ns_BldDataBeamMonitorV1_v0::dataset_data ds_data(*obj);
+    if (append) {
+      hdf5pp::Utils::storeAt(group, "data", ds_data, index);
+    } else {
+      hdf5pp::Utils::storeScalar(group, "data", ds_data);
+    }
+  } else if (append) {
+    hdf5pp::Utils::resizeDataset(group, "data", index < 0 ? index : index + 1);
+  }
+  if (append) {
+    if (obj) {
+      hdf5pp::Utils::storeNDArrayAt(group, "Channel_Intensity", obj->Channel_Intensity(), index);
+    } else {
+      hdf5pp::Utils::resizeDataset(group, "Channel_Intensity", index < 0 ? index : index + 1);
+    }
+  } else {
+    hdf5pp::Utils::storeNDArray(group, "Channel_Intensity", obj->Channel_Intensity());
+  }
+
+}
+
+boost::shared_ptr<PSEvt::Proxy<Psana::Bld::BldDataBeamMonitorV1> > make_BldDataBeamMonitorV1(int version, hdf5pp::Group group, hsize_t idx) {
+  switch (version) {
+  case 0:
+    return boost::make_shared<PSEvt::DataProxy<Psana::Bld::BldDataBeamMonitorV1> >(boost::make_shared<BldDataBeamMonitorV1_v0>(group, idx));
+  default:
+    return boost::make_shared<PSEvt::DataProxy<Psana::Bld::BldDataBeamMonitorV1> >(boost::shared_ptr<Psana::Bld::BldDataBeamMonitorV1>());
+  }
+}
+
+void make_datasets(const Psana::Bld::BldDataBeamMonitorV1& obj, hdf5pp::Group group, const ChunkPolicy& chunkPolicy,
+                   int deflate, bool shuffle, int version)
+{
+  if (version < 0) version = 0;
+  group.createAttr<uint32_t>("_schemaVersion").store(version);
+  switch (version) {
+  case 0:
+    make_datasets_BldDataBeamMonitorV1_v0(obj, group, chunkPolicy, deflate, shuffle);
+    break;
+  default:
+    throw ExceptionSchemaVersion(ERR_LOC, "Bld.BldDataBeamMonitorV1", version);
+  }
+}
+
+void store_BldDataBeamMonitorV1(const Psana::Bld::BldDataBeamMonitorV1* obj, hdf5pp::Group group, long index, int version, bool append)
+{
+  if (version < 0) version = 0;
+  if (not append) group.createAttr<uint32_t>("_schemaVersion").store(version);
+  switch (version) {
+  case 0:
+    store_BldDataBeamMonitorV1_v0(obj, group, index, append);
+    break;
+  default:
+    throw ExceptionSchemaVersion(ERR_LOC, "Bld.BldDataBeamMonitorV1", version);
+  }
+}
+
+void store(const Psana::Bld::BldDataBeamMonitorV1& obj, hdf5pp::Group group, int version) 
+{
+  store_BldDataBeamMonitorV1(&obj, group, 0, version, false);
+}
+
+void store_at(const Psana::Bld::BldDataBeamMonitorV1* obj, hdf5pp::Group group, long index, int version)
+{
+  store_BldDataBeamMonitorV1(obj, group, index, version, true);
 }
 
 } // namespace Bld
